--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <div class="App"><div class="home"><div class="HomeBanner"><div class="HomeBanner__sub container"><div class="fd-col">
          
          <div class="msg">
-      <marquee width="60%" direction="right" height="50px">
+      <marquee  width="60%" direction="left" height="50px">
      Under  Construction   
          </marquee>
       </div>
