--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ $(document).ready(function () {
          <div class="msg">
       <marquee  width="90%" direction="left" height="50px" >
      Under  Construction 
+     Come Back Soon..
          </marquee>
       </div>
       
