--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ $(document).ready(function () {
             </div> 
          <div class="msg">
       <marquee  width="90%" direction="left" height="50px" >
-     Under  Construction 
+     Under  Construction <br>
      Come Back Soon..
          </marquee>
       </div>
