--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@ $(document).ready(function () {
             </div> 
          <div class="msg">
       <marquee  width="90%" direction="left" height="50px" >
-     Under  Construction <br>
-     Come Back Soon..
+     CHAT WITH MY BOT TO KNOW MORE..↘
          </marquee>
       </div>
       
