--- a/downloads.html
+++ b/downloads.html
@@ -17,9 +17,6 @@
 <header>Downloads</header>
 
 <br>
-<marquee direction="left" class="msg">Comming Soon..</marquee>
-<br>
-
 <div class="about">
 <h2>
     <ul class="details">
@@ -39,6 +36,10 @@
 
             We Have Many Games Built With Js , HTML & CSS . 
         </li>
+        <li>
+            We Have Many Projects Done 
+        </li>
+
     </ul>
     
 </h2>
@@ -47,9 +48,36 @@
 
 
 <div class="src">
-<button class="java1">
-    App1
+    <hr>
+    <span>
+        <i>
+            C :-
+        </i>
+
+</span>
+<button class="Clibs">
+
+   C Lib-1
 </button>
+
+<button class="Clibs">
+    C Lib-2
+</button>
+<hr>
+<span>
+    <i>
+    Java :-
+    </i>
+
+</span>
+<button class="javaJar">
+        Note Pad
+</button>
+
+
+<hr>
+
+
 
 
 </div>
@@ -76,6 +104,6 @@
 
 </div>
 
-
+<br>
 </body>
 </html>
