--- a/downloads.html
+++ b/downloads.html
@@ -9,8 +9,9 @@
     Downloads 
 </title>
 
-    </head>
 
+    </head>
+    <script src="ginyosbot.js" async></script>
     <body>
        
 
@@ -73,11 +74,30 @@
 <button class="javaJar">
         Note Pad
 </button>
-
-
 <hr>
+<span>
+    <i>
+     Js , HTML and CSS :-
+    </i>
+    
+</span>
+<button class="webdev">
+    Guess My Number
+</button>
+<button class="webdev">
+    Pig Game
+</button>
 
-
+<br>
+<hr>
+<br>
+<span>
+    <i>
+C++ :- Comming Soon...
+    </i>
+<br>
+<hr>
+<br>
 
 
 </div>
