--- a/links.html
+++ b/links.html
@@ -2,6 +2,8 @@
 <html lang="en"><head><link rel="stylesheet" href="links.css"/><link rel="icon" href="https://avatars.githubusercontent.com/u/103253731?s=400&u=090dd614502893cd1ac42f763eb8cceacd2e3d12&v=4"/><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><meta name="description" content="Vikram Srinivas"><link rel="manifest" href="1.json"><script src="case.js"></script><link href="https://kit-pro.fontawesome.com/releases/latest/css/pro-v4-shims.min.css" media="all" rel="stylesheet"><link href="https://kit-pro.fontawesome.com/releases/latest/css/pro-v4-font-face.min.css" media="all" rel="stylesheet"><link href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all" rel="stylesheet"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><title>Vikram Srinivas</title><link href="chunk1.css" rel="stylesheet"></head>
 
 <body>
+    <script src="ginyosbot.js" async></script>
+
     <script src="links.js"></script>
 <header>Links</header>
 <h1></h1> <br>
