--- a/downloads.html
+++ b/downloads.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="downloads.css"/>
     <link rel="icon" href="https://avatars.githubusercontent.com/u/103253731?s=400&u=090dd614502893cd1ac42f763eb8cceacd2e3d12&v=4"/>
 <title>
-    Downloads 
+Projects
 </title>
 
 
     </head>
-    <script src="ginyosbot.js" async></script>
     <body>
+        <script src="downloads.js" ></script>
        
 
-<header>Downloads</header>
+<header>Projects</header>
 
 <br>
 <div class="about">
@@ -56,12 +56,12 @@
         </i>
 
 </span>
-<button class="Clibs">
-
-   C Lib-1
+<button class="Clibs" onclick="lib1();" >
+C Lib-1
+   
 </button>
 
-<button class="Clibs">
+<button class="Clibs" onclick="lib2();">
     C Lib-2
 </button>
 <hr>
@@ -108,16 +108,19 @@ C++ :- Comming Soon...
 
 
 <details class="readBefore">
-    <summary class="summary">
+    <summary class="detsum">
  Read This Before Downloading
     </summary>
     <li>
 
-    These Apps Are only for Windows OS . Others Have to wait   
+   Java apps Are only for Windows && Mac ;   
     </li>
     <li>
-        Linus Apps Are comming soon...
-    </li>
+        Linux Apps are comming soon.. 
+        </li>
+        <li>
+     Find These Projects on github <a class="githublink_detsum" target="_blank" href="https://github.com/Ginyos-secure">VIST NOW →</a>
+                </li>
 
 </details>
 
