--- a/downloads.html
+++ b/downloads.html
@@ -81,10 +81,10 @@ C Lib-1
     </i>
     
 </span>
-<button class="webdev">
+<button class="webdev" onclick="guessmynumber();">
     Guess My Number
 </button>
-<button class="webdev">
+<button class="webdev" onclick="piggame();">
     Pig Game
 </button>
 
