--- a/downloads.html
+++ b/downloads.html
@@ -12,7 +12,7 @@ Projects
 
     </head>
     <body>
-        <script src="/downloads.js" ></script>
+        <script src="/Type_Script/downloads.ts" ></script>
        
 
 <header>Projects</header>
