--- a/To_do_list.html
+++ b/To_do_list.html
@@ -63,14 +63,10 @@ FONT.key {font-weight: bold; color: darkgreen}
 
 
 <!-- Begin Prerequisites -->
-<table id="BootstrapperSection" border="0"><tbody><tr><td colspan="2">The following prerequisites are required:</td></tr><tr><td width="10">&nbsp;</td><td><ul>
-<li>.NET Desktop Runtime 6.0.5 (x64)</li>
-</ul></td></tr><tr><td colspan="2">
-
-</td></tr><tr><td colspan="2">&nbsp;</td></tr>
-
 <h4>
 <ul>
+    <hr>
+Step For Installing App Via Install Zip button:-
 <li>Download the Zip Folder by clicking on Install Button </li>
     <li>
         Extract The Zip Folder 
@@ -82,8 +78,20 @@ FONT.key {font-weight: bold; color: darkgreen}
     <li>
         The App Will Be Installed
     </li>
+   <br>
+    <hr>
+    Step For Installing App Via Install Wizard button:-
+    <li>Download The File</li>
+    <li>Run the File</li>
+    <li>Use the Wizard to install the app </li>
 </ul>    
-</h4></tbody></table>
+</h4><table id="BootstrapperSection" border="0"><tbody><tr><td colspan="2">The following prerequisites are required:</td></tr><tr><td width="10">&nbsp;</td><td><ul>
+<li>.NET Desktop Runtime 6.0.5 (x64)</li>
+</ul></td></tr><tr><td colspan="2">
+
+</td></tr><tr><td colspan="2">&nbsp;</td></tr>
+
+</tbody></table>
 <!-- End Prerequisites -->
 
 
@@ -113,4 +121,41 @@ FONT.key {font-weight: bold; color: darkgreen}
 
 </tbody></table>
   
-</body></html>
+<!-- Code injected by live-server -->
+<script type="text/javascript">
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script></td></tr></tbody></table></body></html>
