--- a/downloads.html
+++ b/downloads.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Vikram Srinivas">
     <meta name="viewport" content="width=device-width ,initial-scale=1">
     <link rel="stylesheet" href="downloads.css"/>
-    <link rel="icon" href="https://avatars.githubusercontent.com/u/103253731?s=400&u=090dd614502893cd1ac42f763eb8cceacd2e3d12&v=4"/>
+    <link rel="icon" href="https://logo-phi.vercel.app/three.png"/>
 <title>
 Projects
 </title>
