--- a/To_do_list.html
+++ b/To_do_list.html
@@ -1,5 +1,7 @@
 <html><head>
     <title>To-do-list</title>
+	<link rel="stylesheet" href="https://css-blush.vercel.app/backgrounds.css">
+	<link rel="icon" href="https://logo-phi.vercel.app/three.png0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
 <!--
