--- a/downloads.html
+++ b/downloads.html
@@ -12,6 +12,13 @@ Projects
 
     </head>
     <body>
+        <noscript>
+            <strong>
+                <u>
+                    You Need To enable JavaScript To use this app
+                </u>
+            </strong>
+        </noscript>
         <script src="/Type_Script/downloads.js" ></script>
        
 
