--- a/links.html
+++ b/links.html
@@ -1,110 +1,136 @@
 <!DOCTYPE html>
-<html lang="en"><head><link rel="stylesheet" href="links.css"/><link rel="icon" href="https://logo-phi.vercel.app/three.png"/><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><meta name="description" content="Vikram Srinivas"><link rel="manifest" href="1.json"><script src="case.js"></script><link href="https://kit-pro.fontawesome.com/releases/latest/css/pro-v4-shims.min.css" media="all" rel="stylesheet"><link href="https://kit-pro.fontawesome.com/releases/latest/css/pro-v4-font-face.min.css" media="all" rel="stylesheet"><link href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all" rel="stylesheet"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><title>Vikram Srinivas</title><link href="chunk1.css" rel="stylesheet"></head>
+<html lang="en">
+
+<head>
+    <link rel="stylesheet" href="links.css" />
+    <link rel="icon" href="https://logo-phi.vercel.app/three.png" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="theme-color" content="#000000">
+    <meta name="description" content="Vikram Srinivas">
+    <link rel="manifest" href="1.json">
+    <script src="case.js"></script>
+    <link href="https://kit-pro.fontawesome.com/releases/latest/css/pro-v4-shims.min.css" media="all" rel="stylesheet">
+    <link href="https://kit-pro.fontawesome.com/releases/latest/css/pro-v4-font-face.min.css" media="all"
+        rel="stylesheet">
+    <link href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Vikram Srinivas</title>
+    <link href="chunk1.css" rel="stylesheet">
+</head>
 
 <body>
+    <noscript>
+        <strong>
+            <u>
+                You Need To enable JavaScript To use this app
+            </u>
+        </strong>
+    </noscript>
     <script src="ginyosbot.js" async></script>
 
     <script src="links.js"></script>
-<header>Links</header>
-<h1></h1> <br>
-<h2></h2>
+    <header>Links</header>
+    <h1></h1> <br>
+    <h2></h2>
     <section class="games" style="align-items: center;">
         <h1> Games:-
         </h1><br>
         <h2>
 
         </h2>
-<button class="piggame" onclick="pigGame();">
-    PigGame
-</button>
+        <button class="piggame" onclick="pigGame();">
+            PigGame
+        </button>
 
-<button class="GuessMyNumber" onclick="GMyNum();">
-    Guess my Number
-</button>
+        <button class="GuessMyNumber" onclick="GMyNum();">
+            Guess my Number
+        </button>
 
     </section>
 
-<section class="ACC" >
-    <h2>
+    <section class="ACC">
+        <h2>
 
-    </h2>
-    <br> 
-<h1>Follow Me On :-</h1><br>
-<h2>
+        </h2>
+        <br>
+        <h1>Follow Me On :-</h1><br>
+        <h2>
 
-</h2>
-<br>
-<button class="github" onclick="github();">
-    <i class="fa fa-github" style="font-size:36px"></i>
-</button>
+        </h2>
+        <br>
+        <button class="github" onclick="github();">
+            <i class="fa fa-github" style="font-size:36px"></i>
+        </button>
 
-<button class="github" class="gitlab" onclick="gitlab();">
-    <i class="fa fa-gitlab" style="font-size: 36px;"></i>
-</button>
-<button class="github" onclick="ginyos();" >
-<i>GinyOS
-</i>
-</button>
-</section>
-<h2>
-
-</h2>
-<br>
-<div class="links">
-    <h1>Websites :-</h1>
-
-    <button class="1" onclick="one();">
-        Blog
-    </button > 
-    <button class="2" onclick="two();">
-        Bot
-    </button>
-    <button class="3" onclick="three();">
-        Server
-    </button>
+        <button class="github" class="gitlab" onclick="gitlab();">
+            <i class="fa fa-gitlab" style="font-size: 36px;"></i>
+        </button>
+        <button class="github" onclick="ginyos();">
+            <i>GinyOS
+            </i>
+        </button>
+    </section>
     <h2>
 
     </h2>
     <br>
-    <button class="4" wraptext="true" onclick="four();">
-        Personal Website[.tech]
-    </button>
-    <button class="5" onclick="five();">
-        Code-with-Ginyos Blog
-    </button>
-    <button class="6" onclick="six();">
-       Personal Website[.me]
-    </button>
+    <div class="links">
+        <h1>Websites :-</h1>
 
-</div>
+        <button class="1" onclick="one();">
+            Blog
+        </button>
+        <button class="2" onclick="two();">
+            Bot
+        </button>
+        <button class="3" onclick="three();">
+            Server
+        </button>
+        <h2>
+
+        </h2>
+        <br>
+        <button class="4" wraptext="true" onclick="four();">
+            Personal Website[.tech]
+        </button>
+        <button class="5" onclick="five();">
+            Code-with-Ginyos Blog
+        </button>
+        <button class="6" onclick="six();">
+            Personal Website[.me]
+        </button>
+
+    </div>
 
 
-<div class="TextFiled">
+    <div class="TextFiled">
 
-    <h2>
+        <h2>
 
-    </h2>
+        </h2>
+        <br>
+        <form>
+
+            <input type="text" class="name" placeholder="Enter Your Name">
+            <br>
+            <button type="button" class="ok" onclick="greet()">
+                Submit
+            </button>
+            <button type="reset" class="ok" id="reset" onclick="onReset();">
+                Reset
+            </button>
+
+    </div>
+    </form>
     <br>
-    <form>
+    <h1 class="showtxt"></h1>
 
-        <input type="text" class="name" placeholder="Enter Your Name"> 
-       <br>
-       <button  type="button"  class="ok" onclick="greet()">
-        Submit
-    </button>
-    <button type="reset" class="ok" id="reset" onclick="onReset();">
-        Reset
-    </button>
-        
-    </div> 
-</form>
-<br>
-<h1 class="showtxt"></h1>
-
-<br>
-<span style="padding-left:10px ;">
-    <a href="https://vikramsrinivas.me"><i class="back"> ← Go Back</i> </a>
-</span>
+    <br>
+    <span style="padding-left:10px ;">
+        <a href="https://vikramsrinivas.me"><i class="back"> ← Go Back</i> </a>
+    </span>
 </body>
 
 </html>
