--- a/index.html
+++ b/index.html
@@ -23,18 +23,17 @@
 
 <body>
    <div class="App">
-
-      <noscript>
-                        
-         You need to enable JavaScript to run this app.
-
-      </noscript>
       <div class="home">
          <div class="HomeBanner">
             <div class="HomeBanner__sub container">
                <div class="fd-col">
-                  <div class="word">
+                  
 
+                     <noscript>
+                        <strong>
+                           You need to enable JavaScript to run this app.
+
+                        </strong></noscript>
                      <div id="root">
 
 
