--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <meta name="description" content="Vikram Srinivas">
    <link rel="manifest" href="1.json">
    <script src="case.js"></script>
+   <link rel="stylesheet" href="https://css-blush.vercel.app/logo.css">
    <link href="https://kit-pro.fontawesome.com/releases/latest/css/pro-v4-shims.min.css" media="all" rel="stylesheet">
    <link href="https://kit-pro.fontawesome.com/releases/latest/css/pro-v4-font-face.min.css" media="all"
       rel="stylesheet">
@@ -25,6 +26,9 @@
    <div class="App">
       <div class="home">
          <div class="HomeBanner">
+            <div id="logo"><img src="https://logo-phi.vercel.app/one.png">
+    
+            </div>
             <div class="HomeBanner__sub container">
                <div class="fd-col">
                   
