--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-   <!-- <meta name="google-site-verification" content="_BZ6aD3UsUeiCgfGzoU_rrJvjzxh6p7ywMH4SWZcBZ8" /> -->
+   <meta name="google-site-verification" content="_BZ6aD3UsUeiCgfGzoU_rrJvjzxh6p7ywMH4SWZcBZ8" />
    <link rel="icon" href="https://logo-phi.vercel.app/three.png" />
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
