--- a/To_do_list.html
+++ b/To_do_list.html
@@ -1,6 +1,13 @@
 <html>
 
 <head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-5R6WTRH');</script>
+	<!-- End Google Tag Manager -->
 	<title>To-do-list</title>
 	
 	<link rel="icon" href="https://logo-phi.vercel.app/three.png0">
@@ -300,6 +307,10 @@
 </head>
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5R6WTRH"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 	<noscript>
 		<strong>
 			<u>
