--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html lang="en">
 
 <head>
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+   })(window,document,'script','dataLayer','GTM-5R6WTRH');</script>
+   <!-- End Google Tag Manager -->
    <meta name="google-site-verification" content="_BZ6aD3UsUeiCgfGzoU_rrJvjzxh6p7ywMH4SWZcBZ8" />
    <link rel="icon" href="https://logo-phi.vercel.app/three.png" />
    <meta charset="utf-8">
@@ -23,6 +30,10 @@
 
 
 <body>
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5R6WTRH"
+   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+   <!-- End Google Tag Manager (noscript) -->
    <div class="App">
       <div class="home">
          <div class="HomeBanner">
